<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#000000">

    <TextView
        android:id="@+id/header"
        android:layout_width="fill_parent"
        android:layout_height="60dip"
        android:layout_alignParentTop="true"
        android:background="@drawable/gradient"
        android:paddingLeft="10dip"
        android:gravity="center_vertical"
        android:textColor="#ffffff"
        android:text="@string/app_name"
        android:textSize="16dip"/>

    <TextView
        android:id="@+id/hello_world_info"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/header"
        android:padding="10dip"
        android:background="#000000"
        android:textColor="#ffffff"
        android:text="@string/hello_world_info_text"
        android:textSize="16dip"/>

    <Button
        android:id="@+id/say_hello"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="10dip"
        android:layout_below="@id/hello_world_info"
        android:gravity="center_horizontal"
        android:text="@string/say_hello"
        android:layout_marginTop="5px"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/hello_world"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/say_hello"
        android:gravity="center"
        android:padding="10dip"
        android:background="#000000"
        android:textColor="#ffffff"
        android:text="@string/hello_world_text"
        android:textSize="16dip"/>
</RelativeLayout>
