<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#000000">

    <TextView
        android:id="@+id/header"
        android:layout_width="fill_parent"
        android:layout_height="60dip"
        android:layout_alignParentTop="true"
        android:background="@drawable/gradient"
        android:paddingLeft="10dip"
        android:gravity="center_vertical"
        android:textColor="#ffffff"
        android:text="@string/connect_to_the_cloud"
        android:textSize="16dip"/>

    <TextView
        android:id="@+id/connect_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/header"
        android:padding="10dip"
        android:background="#000000"
        android:textColor="#ffffff"
        android:text="@string/connect_text"
        android:textSize="16dip"/>

    <TextView
        android:id="@+id/select_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/connect_text"
        android:text="@string/select_account"
        android:textColor="#ffffff"
        android:layout_margin="5dip"/>

    <View
        android:id="@+id/divider"
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:layout_below="@id/select_text"
        android:background="#808080" />

    <ListView
        android:id="@+id/select_account"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/divider"
        android:layout_margin="10dip"
        android:divider="#FFFFFF"
        android:textSize="16dip"
        android:background="@android:color/transparent"
        android:cacheColorHint="@android:color/transparent">
    </ListView>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="80dip"
        android:layout_above="@+id/connect_footer"
        android:padding="25dip"
        android:gravity="center_vertical"
        android:background="#000000"
        android:textColor="#ffffff"
        android:text="@string/do_you_want_to_connect"
        android:textSize="16dip"/>

    <LinearLayout
        android:id="@id/connect_footer"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="50dip"
        android:layout_alignParentBottom="true"
        android:background="@drawable/gradient">

        <Button
            android:id="@+id/connect"
            android:text="@string/connect"
            android:layout_marginTop="5px"
            android:layout_weight="1"
            android:layout_width="0dip"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</RelativeLayout>
